# otus-cpp

./: .travis.yml  CMakeLists.txt
HelloWorld/: CMakeLists.txt  main.cpp
HelloWorld/test/: CMakeLists.txt  test_version_boost.cpp  test_version_google.cpp
HelloWorld/version/: CMakeLists.txt  version.cpp
